--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://blog.tophoon.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: teachertophoon
+google_analytics: UA-131518672-1
 
 # Build settings
 markdown: kramdown
