구글 애드센스 적용

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://blog.tophoon.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: teachertophoon
 google_analytics: UA-131518672-1
+google_adsense: ca-pub-6825502907404214
 
 # Build settings
 markdown: kramdown
