--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   지금은 이전 회사 동기의 추천으로 훌륭한 동료들이 모여있는
   H모 스타트업에서 서버개발자로 일하고 있습니다.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://blog.tophoon.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.tophoon.com" # the base hostname & protocol for your site, e.g. http://example.com
+enforce_ssl: blog.tophoon.com
 github_username: teachertophoon
 google_analytics: UA-131518672-1
 google_adsense: ca-pub-6825502907404214
